--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
@@ -343,4 +343,27 @@
       });
     }
 
+  // All members of group or selected invitees
+  
+    $(document).ready(function () {
+
+      $('#invite_groupYes').click(function()
+          {
+             $('label[for="has_attendees"]').hide ();
+             $('#has_attendees').hide();
+             $('#panel_Basic').find('.small-5').find('#has_attendees').next().next().next().hide();
+             $('#panel_Basic').find('.small-5').find('#has_attendees').next().hide();
+
+          });
+
+      $('#invite_groupNo').click(function()
+          {
+            $('label[for="has_attendees"]').show();
+            $('#has_attendees').show();
+            $('#panel_Basic').find('.small-5').find('#has_attendees').next().next().next().show();
+            $('#panel_Basic').find('.small-5').find('#has_attendees').next().show();
+          });    
+     
+    });
+
 {% endblock %}	
