--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
@@ -354,6 +354,7 @@
    
    $('label[for="has_attendees"]').fadeOut(tim);
    $('#has_attendees').fadeOut(tim);
+   $('#has_attendees').removeAttr("required");
    $('#panel_Basic').find('.small-5').find('#has_attendees').next().next().next().fadeOut(tim);
    $('#panel_Basic').find('.small-5').find('#has_attendees').next().fadeOut(tim);
         });
@@ -362,6 +363,7 @@
         {
   $('label[for="has_attendees"]').fadeIn(tim);
   $('#has_attendees').fadeIn(tim);
+  $('#has_attendees').attr({"required":""});
   $('#panel_Basic').find('.small-5').find('#has_attendees').next().next().next().fadeIn(tim);
   $('#panel_Basic').find('.small-5').find('#has_attendees').next().fadeIn(tim);
   });         
