--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/repository.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/repository.html
@@ -1,4 +1,5 @@
-{% extends "ndf/base.html" %}
+{% load simple_filters %}
+{% xextends "ndf/base.html" with first_body_column=0 %}
 {% load i18n %}
 {% load ndf_tags %}
 {% load cache %}
@@ -14,14 +15,15 @@
 
 
 {% block body_content %}
+
 		<div class="repository-title large-4 columns">{% trans "Repository" %}
 		</div>
 		<div class="repository-desc large-8 columns">{% trans "Digital resource grouped in multiple ways" %}</div>
 	
 	<!-- <ul class="inline-list card-holder"> -->
-	<ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+	<div class="app-card-wrapper">
 		{% for each_gapp in gapps_obj_list %}
-			<li>
+			<div class="app-card-container">
 				<a class="app-card text-center" 
 				{% if each_gapp.name|lower == "event" %}
 					href="{% url 'program' group_id %}"
@@ -40,9 +42,9 @@
 					<div class="app-card-icon"><img src="{{ each_gapp.url }}" width="50%"></div>
 					<div class="app-card-content">{{each_gapp.content_org|truncatechars:60 }}</div>
 				</a>
-			</li>
+			</div>
 		{% endfor %}
-		<li>
+		<div class="app-card-container">
 			<a class="app-card text-center" href="{% url 'partner_showcase' group_id %}">
 				<div class="app-card-title"><h4>{% trans "Partner Showcase" %}</h4></div>
 				<div class="app-card-icon"><img src="/static/ndf/images/partner-01.svg" width="50%" style="padding-top:-2em"></div>
@@ -50,7 +52,7 @@
 					<div class="app-card-content">{% trans "Contributions from institutions and individuals" %}</div>
 				
 			</a>
-		</li>
+		</div>
 	</ul>
 
 
