--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/map_india.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/map_india.html
@@ -77,7 +77,6 @@ pre.prettyprint {
 /*for pie chart*/
 svg {
   width: 100%;
-  height: 100%;
 }
 
 path.slice{
@@ -185,8 +184,9 @@ div.city_hover_tooltip>div{
 </style>
 <div id="info_bar"></div>
 <div id="map">
+  {%if user.is_staff%}
   <a class="edit_btn button">Edit</a>
-  
+  {%endif%}
 </div>
 
 {% endblock body_content %}
