added code for taking screenshot of video

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -6,7 +6,6 @@
 {% get_group_name groupid as group_name_tag %}
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
-
 <style type="text/css">
   legend{
       text-align: center;
@@ -220,6 +219,7 @@
                             <source src="{{MEDIA_URL}}{{obj.if_file.original.relurl}}" type="video/mp4">
                             {% trans "Your browser does not support the video tag." %}
                           </video>
+
                         {% endif %}
                         <div class="orbit-caption"> {{obj.name}} </div>
                       </center>
@@ -291,13 +291,20 @@
                 </video>
               {% elif 'video' in node.if_file.mime_type %}
 
-                <video width="768" height="432" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{ "autoplay": false, "preload": "metadata" }' poster="{% url 'getvideoThumbnail' group_name_tag node %}" controls buffered>
+                <video  id="video-area" width="768" height="432" class="video-js vjs-default-skin vjs-big-play-centered" data-setup='{ "autoplay": false, "preload": "metadata" }' poster="{% url 'getvideoThumbnail' group_name_tag node %}" controls buffered>
                   <source src="{{MEDIA_URL}}{{node.if_file.mid.relurl}}" type="video/webm">
                   <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="video/ogg">
                   <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="video/mp4">
                   <source src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" type="{{node.if_file.mime_type}}">
                   {% trans "Your browser does not support the video tag." %}
                 </video>
+                <canvas id="canvas" 
+                        width="50px" height="50px"
+                        style="display:block;">
+                </canvas>
+                <div id="screenShots"></div>
+                <input type="button" id="snap" onclick="startScreenshot()" value="take snapshot">
+                <input type="button" id="save-snap" onclick="saveScreenshot()" value="save snapshot">
               {% elif 'audio' in node.if_file.mime_type %}
                 <audio src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" controls loop>
                   <p>{% trans 'Your browser does not support the audio element' %} </p>
@@ -868,3 +875,145 @@
 </div>
   </section>
 
+<script type="text/javascript">
+var video_obj = document.getElementById("video-area");
+var canvas = document.getElementById("canvas");
+var ctx = canvas.getContext("2d");
+var ssContainer = document.getElementById("screenShots");
+var videoHeight, videoWidth;
+var drawTimer = null;
+console.log(video_obj);  
+
+function initScreenshot() {
+  videoHeight = video_obj.videoHeight; 
+  videoWidth = video_obj.videoWidth;
+  canvas.width = 120;
+  canvas.height = 120;
+}
+
+function grabScreenshot() {
+  ctx.drawImage(video_obj, 0, 0, 120, 120);
+  var img = new Image();
+  img.src = canvas.toDataURL("image/png");
+  img.width = 120;
+  console.log(canvas)
+}
+
+function startScreenshot() {
+  
+  initScreenshot();
+  if (drawTimer == null) {
+    drawTimer = grabScreenshot();
+
+      
+      // alert(test);
+  }
+}
+function dataURLToBlob(dataURL){
+                var BASE64_MARKER = ';base64,';
+    if (dataURL.indexOf(BASE64_MARKER) == -1) {
+      var parts = dataURL.split(',');
+      var contentType = parts[0].split(':')[1];
+      var raw = decodeURIComponent(parts[1]);
+
+      return new Blob([raw], {type: contentType});
+    }
+
+    var parts = dataURL.split(BASE64_MARKER);
+    var contentType = parts[0].split(':')[1];
+    console.log(contentType);
+    var raw = window.atob(parts[1]);
+    var rawLength = raw.length;
+
+    var uInt8Array = new Uint8Array(rawLength);
+
+    for (var i = 0; i < rawLength; ++i) {
+      uInt8Array[i] = raw.charCodeAt(i);
+    }
+
+    return new Blob([uInt8Array], {type: contentType});
+  }
+
+function saveScreenshot(){
+    var canvas = document.getElementById("canvas");
+    var blob_object = new Blob();
+    canvas.toBlob(function(blob) {
+      var newImg = document.createElement("img"),
+      url = URL.createObjectURL(blob);
+      var blob = new Blob();
+      blob = canvas.toDataURL("image/png");
+      console.log(blob);
+      get_blob = dataURLToBlob(blob);
+      blob_object = get_blob;
+      console.log(get_blob);
+  });
+
+    var d = new Date();
+    timeStamp = d.getTime();
+    fileName = "{{node.name}}"+"-th-"+timeStamp.toString();
+    file = blob_object
+
+    //alert(timeStamp);
+    console.log(blob_object);
+    
+   
+// Create a new FormData object.
+    var formsData = new FormData();
+
+
+      // // Check the file type.
+      // if (!file.type.match('image.*')) {  continue; }
+
+      // Add the file to the request.
+      formsData.append('filehive', file, fileName);//passing timestamp as file name
+
+    // appending csrfmiddlewaretoken and user-id
+    formsData.append('csrfmiddlewaretoken', '{{csrf_token}}');
+    formsData.append('user','{{request.user.id}}');
+
+    // Set up the request.
+    xhr = new XMLHttpRequest();
+
+    // Open the connection.
+    xhr.open('POST', "{% url 'upload_video_thumbnail' group_id %}", true);
+
+    // Set up a handler for when the request finishes sucessfully.
+    xhr.onload = function () {
+
+      if (xhr.status === 200)
+      {
+        // File(s) uploaded.
+       // if file is not uploaded sucessfully
+        if(xhr.responseText == "UploadError")
+        {
+           alert("Error occurred");
+        }
+        // check if image is not in the list, add it.
+        else if(xhr.responseText )
+        {
+            
+              alert(xhr.responseText);
+
+        }
+
+        // updating metadata of files, if file is uploaded sucessfully
+        // if(xhr.responseText != "UploadError")
+        // {
+        //   // alert('xhr.responseText != "UploadError"');
+        // }
+      }
+      else
+      {
+        alert('An error occurred!');
+      }
+    };
+
+    // Send the Data.
+    xhr.send(formsData);
+
+
+
+}
+
+
+</script>
