Final feature addition

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/mio_index.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/mio_index.html
@@ -647,10 +647,39 @@ body{background-color:#ededf1}.mso h1{}.mso h1{font-family:sans-serif !important
       <div class="header" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 173000px);" id="emb-email-header-container">
       <!--[if (mso)|(IE)]><table align="center" class="header" cellpadding="0" cellspacing="0"><tr><td style="width: 600px"><![endif]-->
         <div class="logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 6px;Margin-bottom: 20px;color: #c3ced9;font-family: Roboto,Tahoma,sans-serif;Margin-left: 20px;Margin-right: 20px;" align="center">
-          <div class="logo-center" style="font-size:0px !important;line-height:0 !important;" align="center" id="emb-email-header"><img style="height: auto;width: 100%;border: 0;max-width: 300px;" src="http://clix.tiss.edu/dev/ver1.0/wp-content/uploads/2015/11/Clix-logo-600x1401.png" alt="hello world" width="300" /></div>
+          <div class="logo-center" style="font-size:0px !important;line-height:0 !important;" align="center" id="emb-email-header"><img style="height: auto;width: 100%;border: 0;max-width: 300px;" src="http://clix.tiss.edu/dev/ver1.0/wp-content/uploads/2015/11/Clix-logo-600x1401.png" alt="" width="300" /></div>
         </div>
       <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
       </div>
+
+      <div style="line-height:20px;font-size:20px;">&nbsp;</div>
+  
+      <div class="layout email-footer" style="margin-left: 550px; auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 173000px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
+        <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;">
+        <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0"><tr class="layout-email-footer"><td style="width: 400px;" valign="top" class="w360"><![endif]-->
+          <!--div class="column wide" style="text-align: center;font-size: 12px;line-height: 19px;color: #7c7e7f;font-family: Ubuntu,sans-serif;Float: left;max-width: 400px;min-width: 320px; width: 320px;width: calc(8000% - 47600px);"-->
+          <div style="text-align: center;font-size: 12px;line-height: 19px;color: #7c7e7f;font-family: Ubuntu,sans-serif;">
+            <div style="Margin-left: 20px;Margin-right: 20px;Margin-top: 10px;Margin-bottom: 10px;">
+              
+              <div>
+                
+              </div>
+              <div style="Margin-top: -30px;">
+                <div>
+                To update the page, reply within this thread by editing the contents of the below box. Any Changes made outside the box will be ignored&nbsp;</div>
+              </div>
+            </div>
+          </div>
+        <!--[if (mso)|(IE)]></td><td style="width: 200px;" valign="top" class="w160"><![endif]-->
+          <div class="column narrow" style="text-align: left;font-size: 12px;line-height: 19px;color: #7c7e7f;font-family: Ubuntu,sans-serif;Float: left;max-width: 320px;min-width: 200px; width: 320px;width: calc(72200px - 12000%);">
+            <div style="Margin-left: 20px;Margin-right: 20px;Margin-top: 10px;Margin-bottom: 10px;">
+              
+            </div>
+          </div>
+        <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
+        </div>
+      </div>
+
       <div class="layout one-col fixed-width" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 173000px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
         <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;background-color: #ffffff;" emb-background-style>
         <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0"><tr class="layout-fixed-width" emb-background-style><td style="width: 600px" class="w560"><![endif]-->
@@ -661,5 +690,50 @@ body{background-color:#ededf1}.mso h1{}.mso h1{font-family:sans-serif !important
     </div>
         
             <div style="Margin-left: 20px;Margin-right: 20px;">
-      <h3 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #788991;font-size: 16px;line-height: 24px;text-align: center;">PAGE CREATED SUCCESSFULLY&nbsp;:</h3><h1 style="Margin-top: 12px;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #3e4751;font-size: 22px;line-height: 31px;font-family: Ubuntu,sans-serif;text-align: center;" name="pg_name">
-
+      <h3 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #788991;font-size: 16px;line-height: 24px;text-align: center;">CHANGES APPLIED SUCCESSFULLY&nbsp;:</h3><h1 style="Margin-top: 12px;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #3e4751;font-size: 22px;line-height: 31px;font-family: Ubuntu,sans-serif;text-align: center;" name="pg_name">{{pg_name}}
+      </h1><p style="Margin-top: 20px;Margin-bottom: 20px;text-align: center;" name="pg_content">{{pg_content}}
+      </p>
+    </div>
+        
+            <div style="Margin-left: 20px;Margin-right: 20px;">
+      <div class="divider" style="display: block;font-size: 2px;line-height: 2px;Margin-left: auto;Margin-right: auto;width: 40px;background-color: #b4b4c4;Margin-bottom: 20px;">&nbsp;</div>
+    </div>
+        
+            <div style="Margin-left: 20px;Margin-right: 20px;">
+      <div style="line-height:5px;font-size:1px">&nbsp;</div>
+    </div>
+        
+            <div style="Margin-left: 20px;Margin-right: 20px;">
+      <div class="btn btn--flat btn--large" style="Margin-bottom: 20px;text-align: center;">
+        <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 14px;font-weight: bold;line-height: 24px;padding: 12px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #fff;background-color: #4eaacc;font-family: 'PT Serif', Georgia, serif;" href="http://google.com">View Page at Metastudio.org</a><![endif]>
+      <!--[if mso]><p style="line-height:0;margin:0;">&nbsp;</p><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" href="http://google.com" style="width:240px" arcsize="9%" fillcolor="#4EAACC" stroke="f"><v:textbox style="mso-fit-shape-to-text:t" inset="0px,11px,0px,11px"><center style="font-size:14px;line-height:24px;color:#FFFFFF;font-family:Georgia,serif;font-weight:bold;mso-line-height-rule:exactly;mso-text-raise:4px">View Page at Metastudio.org</center></v:textbox></v:roundrect><![endif]--></div>
+    </div>
+        
+            <div style="Margin-left: 20px;Margin-right: 20px;Margin-bottom: 24px;">
+      <p style="Margin-top: 0;Margin-bottom: 0;">Powered by gstudio built at Gnowledge Lab, Homi Bhabha Centre for Science Education, TIFR.</p>
+    </div>
+        
+          </div>
+        <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
+        </div>
+      </div>
+  
+      
+      <div class="layout email-footer" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 173000px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
+        <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;">
+        <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0"><tr class="layout-email-footer"><td style="width: 400px;" valign="top" class="w360"><![endif]-->
+          <!--div class="column wide" style="text-align: center;font-size: 12px;line-height: 19px;color: #7c7e7f;font-family: Ubuntu,sans-serif;Float: left;max-width: 400px;min-width: 320px; width: 320px;width: calc(8000% - 47600px);"-->
+            <div style="Margin-left: 20px;Margin-right: 20px;Margin-top: 10px;Margin-bottom: 10px;">
+              
+              <div>
+                
+              </div>
+              <div style="Margin-top: 8px;">
+                <div>___________________________________________________________________________&nbsp;</div>
+              </div>
+            </div>
+          </div>
+      <div style="line-height:40px;font-size:40px;">&nbsp;</div>
+    
+  </div>
+</body></html>
