--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer.html
@@ -8,7 +8,7 @@
     <div class="footer-section container content-section">
         <div class="row" style="padding-left:0px;">
             <div class="footer_content">
-                <img class="footer-logo" src="/static/ndf/css/themes/clix/logo.svg">
+                <img class="footer-logo" title="{{site.SITE_NAME}}" src="{{site.LOGO}}">
                 <br>
                 <ul>
                     <li>
